# ipgeo

./: .env.example  .gitignore  30-day-plan-v2.md  30-day-plan.md  Dockerfile  README.md  STRATEGY.md  benchmark_results.json  competitor_benchmark.json  docker-compose.yml  gen_spotlights.py  nginx.conf  pyproject.toml  requirements.txt  screenshot  strategy-audit.md
.github/workflows/: ci.yml
app/: __init__.py  auth.py  billing.py  config.py  geodb.py  main.py  metrics.py  middleware.py  rapidapi.py  ratelimit.py  redis_client.py  risk.py  webhooks.py
docs/: asn-lookup.html  changelog.html  docs.html  i18n.js  index.html  internal.html  ip-lookup.html  ip-to-city.html  ip-to-country.html  ipinfo-alternative.html  manual-upgrade.html  my-ip.html  paddle-followup-email.md  pricing.html  privacy.html  public-stats.html  rapidapi-launch-plan.md  rapidapi-listing-guide.md  rapidapi-openapi.yaml  refund.html  roadmap.html  robots.txt  signup.html  sitemap.xml  status.html  success.html  sw.js  terms.html  why-maxmind.html
docs/blog/: best-ip-geolocation-api-2026.html  index.html  ip-geolocation-data-providers-comparison.html  maxmind-commercial-license.html
paddle-backup/: .env.example  README.md
paddle-backup/app/: config.py  webhooks.py
paddle-backup/docs/: signup.html  success.html
scripts/: benchmark.py  benchmark_competitors.py  check_expired_subs.py  download-db.sh  reddit_search.py
tests/: conftest.py  test_api.py  test_geodb.py
